# scientist

./: .gitignore  LICENSE  pyproject.toml
src/scientist/: __init__.py  comparators.py  context.py  errors.py  experiment.py  gates.py  observation.py  protocols.py  result.py
src/scientist/publishers/: __init__.py  composite.py  log.py  noop.py  otel.py
tests/: test_comparators.py  test_experiment.py  test_experiment_gates.py  test_gates.py  test_observation.py  test_result.py
tests/test_publishers/: test_composite.py  test_log.py  test_noop.py  test_otel.py
